# lib/db/src/schema/index.ts
@@ -8,3 +8,4 @@ export * from "./testimonials";
 export * from "./page_content";
 export * from "./site_settings";
 export * from "./leads";
+export * from "./articles";
